# lss-arch

./: Cargo.toml  README.md  install.sh  packages.list
chroot/: 10-dhcpcd.preset  10-ssh.preset  bootloader.sh  dhcpcd.sh  install.sh  locale.gen  set-hostname.sh  set-locale.sh  set-timezone.sh  ssh.sh  sshd_config  sudo.sh  user.sh
chroot/keys/: work-laptop.pub
host/: mount.sh  pacstrap.sh  partition.sh
install-host/: format.sh  partition.sh
src/: confirm.rs  console.rs  error.rs  format.rs  main.rs  mount.rs
src/common/: command.rs
src/console/: colors.rs  curses.rs  error.rs  init.rs  message_window.rs  mod.rs  select_window.rs  window.rs
src/console/input_window/: input.rs  mod.rs
src/console/progress_window/: bar.rs  mod.rs
src/console/window/: active_attribute.rs  init.rs  mod.rs  shadow.rs
src/host/: chroot.rs  chroot.sh  drive.rs  error.rs  fstab.rs  hostname.rs  mod.rs  packages.rs  step.rs  unmount.rs
src/host/chroot/: chroot.sh  mod.rs
src/host/drive/: configuration_error.rs  fdisk.rs  install_error.rs  mod.rs
src/host/internet/: mod.rs  set-ip.service  static.rs
src/host/locale/: locale.gen  mod.rs
src/partition/: fdisk.rs  mod.rs
src/runner/: mod.rs  util.rs
src/user_options/: drive.rs  error.rs  hostname.rs  internet.rs  mod.rs  swap_size.rs  timezone.rs  user.rs  username.rs
src/verification/: boot_mode.rs  error.rs  internet_connection.rs  mod.rs  root.rs  step.rs
src/verify/: boot_mode.rs  error.rs  internet.rs  mod.rs  root.rs
src/window/: error.rs  mod.rs
verification/: boot-mode.sh  internet.sh  root.sh
(+18 files in other folders)
